feat: add solutions to lc problem: No.2092 (#4911)