@@ -7,8 +7,9 @@ class Solution {
         Arrays.sort(meetings, Comparator.comparingInt(a -> a[2]));
         for (int i = 0; i < m;) {
             int j = i;
-            for (; j + 1 < m && meetings[j + 1][2] == meetings[i][2]; ++j)
-                ;
+            for (; j + 1 < m && meetings[j + 1][2] == meetings[i][2];) {
+                ++j;
+            }
             Map<Integer, List<Integer>> g = new HashMap<>();
             Set<Integer> s = new HashSet<>();
             for (int k = i; k <= j; ++k) {
@@ -26,7 +27,7 @@ class Solution {
             }
             while (!q.isEmpty()) {
                 int u = q.poll();
-                for (int v : g.getOrDefault(u, Collections.emptyList())) {
+                for (int v : g.getOrDefault(u, List.of())) {
                     if (!vis[v]) {
                         vis[v] = true;
                         q.offer(v);
